Finishing compilation tasks

--- a/dev/_includes/footer.html
+++ b/dev/_includes/footer.html
@@ -1,5 +1,17 @@
-        <footer>
+            </div>
+        <footer></footer>
 
-        </footer>
+        <!--==== Scripts ====-->
+        <!-- build:js scripts/jquery.min.js -->
+        <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+        <!-- endbuild -->
+        <!-- build:js scripts/base.min.js -->
+        <script src="../scripts/base.js"></script>
+        <!-- endbuild -->
+        <!-- build:js scripts/{{ page.slug }}.min.js -->
+        <script src="../scripts/{{ page.slug }}.js"></script>
+        <!-- endbuild -->
+        <!--==== Scripts ====-->
+        
     </body>
 </html>
