--- a/dev/_includes/head.html
+++ b/dev/_includes/head.html
@@ -22,7 +22,7 @@
         <meta property="og:title" content="{{ page.title }}">
         <meta property="og:site_name" content="{{ page.name }}">
         <meta property="og:description" content="{{ page.description }}">
-        <meta property="og:image" content="{{ page.path }}{{ page.share }}">
+        <meta property="og:image" content="{{ site.baseUrl }}/resources{{ page.share }}">
         <meta property="og:image:type" content="image/jpeg">
         <meta property="og:image:width" content="800">
         <meta property="og:image:height" content="500">
@@ -33,26 +33,26 @@
         <!--==== Definition ====-->
 
         <!--==== Favicons ====-->
-        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.baseUrl }}/icons/apple-touch-icon-57x57.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseUrl }}/icons/apple-touch-icon-114x114.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseUrl }}/icons/apple-touch-icon-72x72.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseUrl }}/icons/apple-touch-icon-144x144.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ site.baseUrl }}/icons/apple-touch-icon-60x60.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ site.baseUrl }}/icons/apple-touch-icon-120x120.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ site.baseUrl }}/icons/apple-touch-icon-76x76.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.baseUrl }}/icons/apple-touch-icon-152x152.png" />
-        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/icons/favicon-196x196.png" sizes="196x196" />
-        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/icons/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/icons/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/icons/favicon-16x16.png" sizes="16x16" />
-        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/icons/favicon-128.png" sizes="128x128" />
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-57x57.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-144x144.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-60x60.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-120x120.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-76x76.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-152x152.png" />
+        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/resources/icons/favicon-196x196.png" sizes="196x196" />
+        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/resources/icons/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/resources/icons/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/resources/icons/favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/resources/icons/favicon-128.png" sizes="128x128" />
         <meta name="application-name" content="{{ page.name }}"/>
         <meta name="msapplication-TileColor" content="#dad804" />
-        <meta name="msapplication-TileImage" content="{{ site.baseUrl }}/icons/mstile-144x144.png" />
-        <meta name="msapplication-square70x70logo" content="{{ site.baseUrl }}/icons/mstile-70x70.png" />
-        <meta name="msapplication-square150x150logo" content="{{ site.baseUrl }}/icons/mstile-150x150.png" />
-        <meta name="msapplication-wide310x150logo" content="{{ site.baseUrl }}/icons/mstile-310x150.png" />
-        <meta name="msapplication-square310x310logo" content="{{ site.baseUrl }}/icons/mstile-310x310.png" />
+        <meta name="msapplication-TileImage" content="{{ site.baseUrl }}/resources/icons/mstile-144x144.png" />
+        <meta name="msapplication-square70x70logo" content="{{ site.baseUrl }}/resources/icons/mstile-70x70.png" />
+        <meta name="msapplication-square150x150logo" content="{{ site.baseUrl }}/resources/icons/mstile-150x150.png" />
+        <meta name="msapplication-wide310x150logo" content="{{ site.baseUrl }}/resources/icons/mstile-310x150.png" />
+        <meta name="msapplication-square310x310logo" content="{{ site.baseUrl }}/resources/icons/mstile-310x310.png" />
         <!--==== Favicons ====-->
 
         <!--==== Stylesheets ====-->
