Updating files structure and dependencies

--- a/dev/stylesheets/modules/_fonts.scss
+++ b/dev/stylesheets/modules/_fonts.scss
@@ -1,9 +1,4 @@
 @include font-face(
     "VarelaRoundRegular",
-    font-files(
-        "VarelaRoundRegular/VarelaRoundRegular.woff",
-        "VarelaRoundRegular/VarelaRoundRegular.ttf",
-        "VarelaRoundRegular/VarelaRoundRegular.svg"
-    ),
-    "VarelaRoundRegular/VarelaRoundRegular.eot"
+    font-files("VarelaRoundRegular/VarelaRoundRegular.woff2")
 );
