--- a/dev/stylesheets/modules/_variables.scss
+++ b/dev/stylesheets/modules/_variables.scss
@@ -8,4 +8,4 @@ $color-light:  white;
 $color-dark:   black;
 $color-shadow: rgba($color-dark, .8);
 
-$font-theme: 'Varela Round';
+$font-theme: "Varela Round";
