--- a/dev/_includes/footer.html
+++ b/dev/_includes/footer.html
@@ -1,7 +1,6 @@
             </div>
-        <footer></footer>
-
-        <!--==== Analytics ====-->
+        <footer>
+        </footer>
         <script>
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
@@ -22,19 +21,21 @@
             (window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
             ga('create', 'XX-XXXXXXXX-X', 'auto');
         </script>
-        <!--==== Analytics ====-->
-        
-        <!--==== Scripts ====-->
-        <!-- build:js scripts/jquery.min.js -->
-        <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
+        <script>
+            if ('serviceWorker' in navigator)
+                navigator.serviceWorker.register('./service-worker.js');
+        </script>
+        <!-- build:js scripts/vendors.js -->
+        <script src="../../node_modules/jquery/dist/jquery.js"></script>
         <!-- endbuild -->
-        <!-- build:js scripts/base.min.js -->
-        <script src="../scripts/base.js"></script>
+        <!-- build:js scripts/app.js -->
+        <script src="../scripts/app.module.js"></script>
+        <script src="../scripts/helpers/device.helper.js"></script>
+        <script src="../scripts/controllers/app.controller.js"></script>
+        <script src="../scripts/app.bootstrap.js"></script>
         <!-- endbuild -->
-        <!-- build:js scripts/{{ page.slug }}.min.js -->
-        <script src="../scripts/{{ page.slug }}.js"></script>
-        <!-- endbuild -->
-        <!--==== Scripts ====-->
-        
+        <!-- build:js scripts/pages/{{ page.dependencie }}.page.js -->
+        <script src="../scripts/controllers/pages/{{ page.dependencie }}.controller.js"></script>
+        <!-- endbuild -->        
     </body>
 </html>
