--- a/dev/_includes/head.html
+++ b/dev/_includes/head.html
@@ -1,70 +1,34 @@
     <head>
-        <title>{{ page.title }} | {{ site.name }}</title>
-
-        <!--==== Behavior ====-->
+        <title>{{ site.name }} | {{ page.title }}</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="theme-color" content="#313140">
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-        <!--==== Behavior ====-->
-
-        <!--==== Information ====-->
-        <meta name="author" content="Paulo Campos">
-        <meta name="application-name" content="{{ page.title }}">
-        <meta name="description" content="{{ page.description }}">
-        <meta name="keywords" content="{{ page.keywords }}">
-        <!--==== Information ====-->
-
-        <!--==== Share ====-->
         <meta property="og:locale" content="pt-BR">
         <meta property="og:type" content="website">
         <meta property="og:url" content="{{ site.baseUrl }}{{ page.path }}">
         <meta property="og:title" content="{{ page.title }}">
         <meta property="og:site_name" content="{{ page.name }}">
         <meta property="og:description" content="{{ page.description }}">
-        <meta property="og:image" content="{{ site.baseUrl }}/resources{{ page.share }}">
+        <meta property="og:image" content="{{ page.share }}">
         <meta property="og:image:type" content="image/jpeg">
         <meta property="og:image:width" content="800">
         <meta property="og:image:height" content="500">
-        <!--==== Share ====-->
-
-        <!--==== Definition ====-->
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <meta name="author" content="Paulo Campos">
+        <meta name="application-name" content="{{ page.title }}">
+        <meta name="description" content="{{ page.description }}">
+        <meta name="keywords" content="{{ page.keywords }}">
+        <meta name="theme-color" content="#313140">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="./icons/ms-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./icons/apple-icon-180x180.png">
+        <link rel="shortcut icon" type="image/x-icon" href="./icons/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="./icons/icon-32x32.png">
+        <link rel="manifest" href="./manifest.json">
         <link rel="canonical" href="{{ site.baseUrl }}{{ page.path }}">
-        <!--==== Definition ====-->
-
-        <!--==== Favicons ====-->
-        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-57x57.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-114x114.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-72x72.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-144x144.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-60x60.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-120x120.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-76x76.png" />
-        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="{{ site.baseUrl }}/resources/icons/apple-touch-icon-152x152.png" />
-        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/resources/icons/favicon-196x196.png" sizes="196x196" />
-        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/resources/icons/favicon-96x96.png" sizes="96x96" />
-        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/resources/icons/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/resources/icons/favicon-16x16.png" sizes="16x16" />
-        <link rel="icon" type="image/png" href="{{ site.baseUrl }}/resources/icons/favicon-128.png" sizes="128x128" />
-        <meta name="application-name" content="{{ page.name }}"/>
-        <meta name="msapplication-TileColor" content="#dad804" />
-        <meta name="msapplication-TileImage" content="{{ site.baseUrl }}/resources/icons/mstile-144x144.png" />
-        <meta name="msapplication-square70x70logo" content="{{ site.baseUrl }}/resources/icons/mstile-70x70.png" />
-        <meta name="msapplication-square150x150logo" content="{{ site.baseUrl }}/resources/icons/mstile-150x150.png" />
-        <meta name="msapplication-wide310x150logo" content="{{ site.baseUrl }}/resources/icons/mstile-310x150.png" />
-        <meta name="msapplication-square310x310logo" content="{{ site.baseUrl }}/resources/icons/mstile-310x310.png" />
-        <!--==== Favicons ====-->
-
-        <!--==== Stylesheets ====-->
-        <!-- build:css stylesheets/normalize.min.css -->
-        <link rel="stylesheet" href="../../node_modules/normalize.css/normalize.css">
+        <!-- build:css stylesheets/app.css -->
+        <link rel="stylesheet" href="../stylesheets/app.reset.css">
         <!-- endbuild -->
-        <!-- build:css stylesheets/reset.min.css -->
-        <link rel="stylesheet" href="../stylesheets/reset.css">
+        <!-- build:css stylesheets/pages/{{ page.dependencie }}.page.css -->
+        <link rel="stylesheet" href="../stylesheets/pages/{{ page.dependencie }}.page.css">
         <!-- endbuild -->
-        <!-- build:css stylesheets/{{ page.slug }}.min.css -->
-        <link rel="stylesheet" href="../stylesheets/pages/{{ page.slug }}.css">
-        <!-- endbuild -->
-        <!--==== Stylesheets ====-->      
-
     </head>
